--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>WikiNote</title>
-  <link rel="stylesheet" href="./css/style.css" media="screen"> 
+  <link rel="stylesheet" href="./css/style.css" media="screen">
 </head>
+
 <body>
   <h1>WikiNote</h1>
-  <script src="../bower_components/requirejs/require.js"></script>
-  <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="../bower_components/marked/marked.min.js"></script>
+
+  <button type="button" name="button" id="addbutton">Add</button>
+  <button type="button" name="button" id="popbutton">Pop</button>
+  <script src="../bower_components/requirejs/require.js" data-main="./script/app"></script>
 </body>
+
 </html>
