--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,8 @@
 
 <body>
   <h1>WikiNote</h1>
+  <h2>hello word</h2>
+  <h3></h3>
 
   <button type="button" name="button" id="addbutton">Add</button>
   <button type="button" name="button" id="popbutton">Pop</button>
