Add karma config file and test-main for RequireJS

--- a/app/index.html
+++ b/app/index.html
@@ -9,11 +9,9 @@
 
 <body>
   <h1>WikiNote</h1>
-  <h2>hello word</h2>
-  <h3></h3>
+  <h2>Hello Word</h2>
+  <h3>Hello Again</h3>
 
-  <button type="button" name="button" id="addbutton">Add</button>
-  <button type="button" name="button" id="popbutton">Pop</button>
   <script src="../bower_components/requirejs/require.js" data-main="./script/app"></script>
 </body>
 
